--- a/app/sass/content/content.scss
+++ b/app/sass/content/content.scss
@@ -4,4 +4,9 @@
 	margin-bottom: 130px;
 }
 
+.composition-section {
+	margin-bottom: 130px;
+	padding: 120px 0;
+}
+
 /*______ END MAIN CONTENT ______*/
