--- a/app/sass/global/variables.scss
+++ b/app/sass/global/variables.scss
@@ -25,6 +25,7 @@ $bgColor: #faf4ef;
 $bgColorUI: #ECE6E1;
 $white: #ffffff;
 $green: #549537;
+$salat: #9bc045;
 //$yellow: linear-gradient(180deg, #ffa722 0%, #ffb422 100%);
 $yellow: #ffb422;
 
