--- a/app/templates/includes/components/typebox-section.twig
+++ b/app/templates/includes/components/typebox-section.twig
@@ -1,10 +1,10 @@
 {% if theme == "green" %}
 
-	<div class="typebox-section" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
+	<div class="typebox-section wave-bg" uk-scrollspy="cls: wave-anim">
 		<div class="uk-container">
 			<h2 class="title-h2 uk-text-center" uk-scrollspy="cls:slide-up">Виды упаковки</h2>
 
-			<ul class="typebox-list">
+			<ul class="typebox-list" uk-scrollspy="target: .item; cls: slide-right; delay: 300">
 
 				<li class="item">
 					<div class="item__img">
