--- a/app/templates/includes/header/main-nav.twig
+++ b/app/templates/includes/header/main-nav.twig
@@ -3,33 +3,43 @@
 <nav class="nav">
 	<div class="uk-container">
 		<ul class="main-nav">
-			<li><a href="#">Лето</a></li>
-			<li><a href="#">Деревнское угодье</a></li>
+			<li class="active">
+				<a href="#">
+					<svg width="82px" height="59px" class="nav-ellipse">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-1"></use>
+					</svg>
+					<span>Лето</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<svg width="233px" height="71px" class="nav-ellipse">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-2"></use>
+					</svg>
+					<span>Деревенское угодье</span>
+				</a>
+			</li>
 			<li>
 				<span class="logo1">
 					<a href="#"><img src="img/media/logo.svg" alt="Leto"></a>
 				</span>
 			</li>
-			<li><a href="#">Junior</a></li>
-			<li><a href="#">Сельская новь</a></li>
+			<li>
+				<a href="#">
+					<svg class="nav-ellipse">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-3"></use>
+					</svg>
+					<span>Junior</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<svg class="nav-ellipse">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#nav-ellipse-4"></use>
+					</svg>
+					<span>Сельская новь</span>
+				</a>
+			</li>
 		</ul>
 	</div>
 </nav><!-- end nav -->
-
-
-
-<!-- <div class="logo1">
-	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
-</div>
-
-<div class="logo2">
-	<a href="">
-		<span></span>
-		<img src="img/media/logo.svg" alt="Leto"/>
-	</a>
-</div>
-
-<div class="logo3">
-	<a href=""><img src="img/media/logo.svg" alt="Leto"/></a>
-</div>
- -->
