--- a/app/sass/content/main-banner.scss
+++ b/app/sass/content/main-banner.scss
@@ -4,21 +4,23 @@
 	position: relative;
 	&__img {
 		position: relative;
+		&.border-anim {
+			img {
+				border-radius: 0% 0% 100% 100% / 0 0 50% 50%;
+				//border-radius: 0% 0% 50% 50% / 0% 0% 10% 10%;
+			}
+		}
+		img {
+			transition: border-radius 1s linear;
+			transition-delay: 1s;
+			border-radius: 0% 0% 100% 100% / 0 0 0% 0%;
+		}
 		svg {
+			position: absolute;
+			bottom: 0;
+			left: 0;
 			width: 100%;
 			height: 100px;
-		}
-		&:after {
-			//content: '';
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			height: 60px;
-			width: 100%;
-			display: block;
-			background: $white;
-			border: 1px solid;
-			
 		}
 	}
 	&__arrow-down {
@@ -60,6 +62,10 @@
 	bottom: -240px;
 	transform: translateX(-50%);
 	z-index: 980;
+	visibility: hidden;
+	&.uk-visible {
+		visibility: visible;
+	}
 	img {
 		opacity: 1;
 		transition: opacity .5s, visibility .5s ease;
