--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -5,26 +5,31 @@
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
 
-			<div class="main-banner__img">
+			<div class="main-banner__img" uk-scrollspy="cls:border-anim">
 				<img src="img/media/main-banner-1-1440x730.png" alt="">
-				<!-- 				<svg>
-					<defs>
-						<clipPath id="cut-center">
-							<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
-						</clipPath>
-					</defs>
-					<rect
-						width="100%"
-						height="400px"
-						clip-path="url(#cut-center)"
-						fill="transparent"
-						>
-				</svg> -->
+<!-- <svg>
+	<defs>
+		<clipPath id="cut-center">
+			<ellipse fill="red" rx="800px" ry="200px" cx="690" cy="-100" />
+		</clipPath>
+	</defs>
+	<rect
+		width="100%"
+		height="100px"
+		clip-path="url(#cut-center)"
+		fill="blue"
+		></rect>
+	<rect
+		width="100%"
+		height="100px"
+		fill="red"
+		></rect>
+</svg> -->
 			</div>
 
 			<div class="main-banner__text">
 				<div class="main-banner__title">
-					<h1>Натуральный продукт</h1>
+					<h1 uk-scrollspy="cls:slide-up">Натуральный продукт</h1>
 				</div>
 				<div class="main-banner__subtitle">
 					для всей семьи
@@ -34,7 +39,7 @@
 				</svg>
 			</div>
 			
-			<div class="fly-box" uk-scrollspy="cls: slide-up-abs">
+			<div class="fly-box " uk-scrollspy="cls: slide-up-abs uk-visible; delay: 500">
 				<img src="img/media/egg-box-1.png" alt="Лето">
 			</div>
 
@@ -163,4 +168,5 @@
 	{% include './includes/components/typebox-section.twig' with {'theme': 'green'} %}
 	{% include './includes/components/brands-slider.twig' %}
 	{% include './includes/components/time-section.twig' %}
+	{% include './includes/components/composition-section.twig' %}
 {% endblock %}
