--- a/app/sass/header/header-desk.scss
+++ b/app/sass/header/header-desk.scss
@@ -70,14 +70,24 @@
 	align-items: center;
 	height: 90px;
 	z-index: 500;
+	@media (min-width: $mob-xs) {
+		flex-wrap: wrap;
+	};
 	li {
 		margin-right: 40px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		@media (min-width: $mob-xs) {
+			margin-right: 0;
+			padding: 0;
+		};
 		&:first-child {
 			position: relative;
 			padding-right: 40px;
+			@media (min-width: $mob-xs) {
+				padding-right: 0;
+			};
 			&:after {
 				content: '';
 				position: absolute;
@@ -89,12 +99,21 @@
 				background-color: #333e2c;
 				border-radius: 50%;
 				transform: translateY(-50%);
+				@media (min-width: $mob-xs) {
+					display: none;
+				};
+				@media (min-width: $tablet-w) {
+					display: block;
+				};
 			}
 		}
 		&:last-child {
 			position: relative;
 			margin-right: 0;
 			padding-left: 40px;
+			@media (min-width: $mob-xs) {
+				padding-left: 0;
+			};
 			&:after {
 				content: '';
 				position: absolute;
@@ -106,6 +125,12 @@
 				background-color: #333e2c;
 				border-radius: 50%;
 				transform: translateY(-50%);
+				@media (min-width: $mob-xs) {
+					display: none;
+				};
+				@media (min-width: $tablet-w) {
+					display: block;
+				};
 			}
 		}
 		a {
@@ -115,6 +140,14 @@
 			text-transform: uppercase;
 			font-weight: 700;
 			color: $white;
+			@media (min-width: $mob-xs) {
+				//padding: 0;
+				font-size: 12px;
+				line-height: 18px;
+				svg {
+					//display: none;
+				}
+			};
 			&:hover {
 				text-decoration: none;
 			}
@@ -137,6 +170,27 @@
 			z-index: 16;
 			transition: color .3s ease;
 		}
+		&:nth-child(1) {
+			order: 1;
+			width: 32.3333%;
+		}
+		&:nth-child(2) {
+			order: 4;
+			width: 50%;
+		}
+		&:nth-child(3) {
+			margin-top: -30px;
+			order: 2;
+			width: 35.3333%;
+		}
+		&:nth-child(4) {
+			order: 3;
+			width: 32.3333%;
+		}
+		&:nth-child(5) {
+			order: 5;
+			width: 50%;
+		}
 	}
 }
 
@@ -149,6 +203,10 @@
 	border-radius: 50%;
 	//background-color: #ffa722;
 	//background: linear-gradient(75deg, #ff9300 0%, #ffc90e 100%);
+	@media (min-width: $mob-xs) {
+		width: 100px;
+		height: 100px;
+	};
 	a {
 		position: relative;
 		padding: 0 !important;
