--- a/app/templates/includes/header/header-mobile.twig
+++ b/app/templates/includes/header/header-mobile.twig
@@ -1,4 +1,4 @@
 <!-- begin header__mobile -->
-<div class="header__mobile uk-hidden@m">
+<div class="header__mobile uk-hidden">
 	555
 </div><!-- end header__mobile -->
